# scattering-gan-sim

./: .gitignore  LICENSE  README.md  check_deps.py  coherent_data.py  d2nn.py  data.py  experiment.py  losses.py  metrics.py  optics.py  patchgan.py  pyproject.toml  runtime.py  unet.py
configs/: huang2026_visible_coherent.json  huang2026_visible_incoherent.json  huang2026_visible_multiwavelength.json  luo2022_fixed4_backend.json  luo2022_r0.json
docs/: README.md  gpu-phase-comparison.md  huang2026-visible-baseline.md  luo2022-fixed4-backend-results.md  luo2022-r0-results.md  research-roadmap.md  system-overview.md
docs/archive/: README.md
docs/archive/legacy/: gpu-phase-comparison.md
docs/assets/: luo2022_fixed4_backend_per_digit.csv  luo2022_fixed4_backend_summary.json
notebooks/: scattering_gan_summary.ipynb
tests/: test_backend_contract.py  test_backend_data.py  test_backend_experiment.py  test_backend_metrics.py  test_coherent_data.py  test_d2nn.py  test_data.py  test_experiment.py  test_huang2026_d2nn.py  test_huang2026_data_losses_metrics.py  test_huang2026_experiment.py  test_metrics.py  test_models.py  test_optics.py  test_reproduction_contract.py  test_runtime.py
